fix bug in dark mode

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,7 +4,7 @@
 }
 
 main {
-    min-height: 0;
+    min-height: 90vh;
 }
 
 .navfooter {
